# claudecode-rule2hook

./: CLAUDE.md  MCP_SERVER_README.md  contracts.py  defensive.py  exceptions.py  pyproject.toml  quick-test.sh  rule2hook_mcp_server.py  rule2hook_mcp_server_v2.py  test_contracts.py  test_exceptions.py  test_rule2hook_server.py  validate-hooks.py
development/: ADDER_SUMMARY.md  IMPROVEMENTS.md  TODO.md
development/protocols/: fastmcp_python_protocol.md
development/tasks/: TASK_3.md
tests/: TESTING.md
